Small fix to manpage.

--- a/debian/gromit-mpx.1
+++ b/debian/gromit-mpx.1
@@ -1,5 +1,5 @@
 .\"                                      Hey, vim: ft=nroff
-.TH GROMIT 1 "February 10, 2011"
+.TH GROMIT-MPX 1 "February 10, 2011"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
