--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 
-* don't show annotation on every virtual desktop
+* tray icon
+* intro screen
+* runtime option to not show annotation on every virtual desktop
 * spot memleaks
 * code cleanup
