--- a/gromit-mpx.1
+++ b/gromit-mpx.1
@@ -88,6 +88,9 @@ will clear the screen.
 .TP
 .B \-z, \-\-undo
 will undo the last drawing stroke.
+.TP
+.B \-y, \-\-redo
+will redo the last undone drawing stroke.
 .SH BUGS
 When there is no compositing manager such as Compiz or xcompmgr
 running, Gromit-MPX falls back to a legacy drawing mode. This may
