--- a/README
+++ b/README
@@ -24,6 +24,11 @@ interest until hopefully everybody noticed it. With Gromit-MPX, you
 can draw everywhere onto the screen, highlighting some button or area.
 
 
+Similar tools for MS-Windows include DemoHelper (GPLv2 also), or 
+proprietary tools like ZoomIt and ScreenMarker. For Compiz, there is 
+also the "Annotate" plugin, and the much-flashier "Firepaint (paint 
+fire on screen)" plugin.
+
 
 How to use it
 -------------
