--- a/gromit-mpx.1
+++ b/gromit-mpx.1
@@ -1,3 +1,4 @@
+$ sudo apt-get install gromit-mpx
 .\"                                      Hey, vim: ft=nroff
 .TH GROMIT-MPX 1 "November 3, 2018"
 .\" Please adjust this date whenever revising the manpage.
