Add -V and --version cmdline args

--- a/gromit-mpx.1
+++ b/gromit-mpx.1
@@ -85,6 +85,9 @@ will change the key used to undo/redo strokes. Under rare circumstances
 identifying the key with the keysym can fail. You can then use the keycode
 to specify the key uniquely. To determine the keycode for different keys you
 can use the \fBxev\fP(1) command.
+.TP
+.B \-V, \-\-version
+will show the Gromit-MPX version.
 .SH OPTIONS (CONTROL)
 A sort summary of the available commandline arguments to control an already
 running Gromit-MPX process, see above for the options available to start Gromit-MPX.
