manpage: update email

--- a/gromit-mpx.1
+++ b/gromit-mpx.1
@@ -141,7 +141,7 @@ terminal-programs tend to scroll incredibly slow if something is
 painted over their window.
 .SH AUTHORS
 Simon Budig <simon@gimp.org>
-Christian Beier <dontmind@freeshell.org>
+Christian Beier <info@christianbeier.net>
 .PP
 This manual page was written by Pierre Chifflier <chifflier@cpe.fr> and
 Simon Budig for the original Gromit and extended for Gromit-MPX by
