--- a/gromit-mpx.1
+++ b/gromit-mpx.1
@@ -139,6 +139,12 @@ thin lines. It makes heavy use of the shape extension, which is
 quite expensive if you paint a complex pattern on screen. Especially
 terminal-programs tend to scroll incredibly slow if something is
 painted over their window.
+
+XFCE per default grabs Ctrl-F1 to Ctrl-F12 (switch to workspace 1-12)
+and Alt-F9 (minimize window) which renders Gromit-MPX's default hotkey
+mapping unusable. Gromit-MPX detects XFCE and changes the default hotkeys
+to Home and End. Those can can still be overridden by the user.
+
 .SH AUTHORS
 Simon Budig <simon@gimp.org>
 Christian Beier <info@christianbeier.net>
