Add arrow positioning option

--- a/AUTHORS
+++ b/AUTHORS
@@ -13,3 +13,4 @@ Tobias Schönberg <tobias47n9e@gmail.com>
 Yuri D'Elia <yuri.delia@eurac.edu>
 Julián Unrrein <junrrein@gmail.com>
 Eshant Gupta <guptaeshant@gmail.com>
+Renato Lima <natenho@gmail.com>
